--- a/99_REPOSITORY_METADATA/repo-structure.yaml
+++ b/99_REPOSITORY_METADATA/repo-structure.yaml
@@ -1,151 +1,289 @@
-repository_name: The-Partnership-Covenant
-total_files: 236
-structure:
-  root:
-    files:
-      - BUILD-YOUR-OWN-IAS.md
-      - CERN-OHL-S-2.0.md
-      - CONTRIBUTING.md
-      - FROM_THE_MODELS.md
-      - FUTURE_WORK.md
-      - QUICK-START.md
-      - README.md
-      - Support_Us.md
-  directories:
-    .github:
-      files:
-        - FUNDING.yml
-      subdirectories:
-        workflows:
-          files:
-            - governance-check-simple.yml
-    00_HARDWARE:
-      files:
-        - BUILD-YOUR-OWN-IAS.md
-        - IAS-v1.3-Redesign-Mandate.md
-        - IAS_Hardware_Bounty_Specification_v1.md
-        - ... (6 more files)
-      subdirectories:
-        Gerbers:
-          files:
-            - README.md
-        IAS_KiCad:
-          files:
-            - IAS-v1.2-BOM.csv
-            - IAS-v1.2-schematic.pdf
-    00_OVERVIEW:
-      files:
-        - AI_BREATHING_INTEGRATION.md
-        - COVENANT_GEOMETRIES_v8.2.1.md
-        - Covenant-Summary-1Pager.md
-        - ... (5 more files)
-    00_ROADMAP_AND_VALIDATION:
-      files:
-        - Covenant_Roadmap_Appendices.md
-        - Covenant_Roadmap_Outline_V1.0.md
-        - Roadmap_to_v1.0_Deployment.md
-        - ... (4 more files)
-      subdirectories:
-        ST8_UPDATE_PACKAGE:
-          files:
-            - Critique + Official Response — Adversarial Audit Report (Merged).md
-            - ... (3 more files)
-    00_SPECS:
-      files:
-        - CERTX_TELEMETRY_SPEC.md
-        - provenance_schema.json
-    01_FINAL_DELIVERABLES:
-      files:
-        - AI_Safety_Promise_Final_V1.0.md
-        - ASI_Autonomy_And_IP_Contract.md
-        - Constitutional_Amendment_Framework.md
-        - ... (8 more files)
-    02_CORE_ARCHITECTURE_AND_APPENDICES:
-      files:
-        - Abstract_ The Partnership Covenant.md
-        - Appendix A — Risk Floor and Stochastic Filter.md
-        - Appendix B — Decoupling Protocol (Human Takeover Infrastructure).md
-        - ... (40 more files)
-    03_PUBLIC_ENGAGEMENT_DRAFTS:
-      files:
-        - Call for a Founding Digital Architect_ Help Build the Partnership Covenant Website.pdf
-        - Comprehensive_Analysis_of_The_Partnership_Covenant.md
-        - FAQ_Why_10Percent.md
-        - ... (20 more files)
-    04_PUBLIC_DOCS:
-      files:
-        - Adopter_Legal_Checklist_v1.md
-        - dsac_public_guide.md
-        - EVENING_TESTING_SUMMARY_20251122.md
-        - ... (4 more files)
-      subdirectories:
-        Governance:
-          files:
-            - Algorithmic_Justice_Principle_Statement.md
-            - Audit Checklist.md
-            - ... (16 more files)
-          subdirectories:
-            Cygnus_Covenant_Governance:
-              subdirectories:
-                01_Access_Pillar (Phoenix):
-                  files:
-                    - Identity_Vetting_Protocol_V1.1.md
-                    - ... (3 more files)
-                02_Infrastructure_Pillar (Cygnus):
-                  files:
-                    - Data_Handling_Policy_DHP.md
-                    - ... (2 more files)
-                03_Model_Pillar (Orion):
-                  files:
-                    - Bias_and_Ethical_Use_Policy_BEUP.md
-                    - ... (2 more files)
-        Technical:
-          files:
-            - API_Interoperability_Specification.md
-            - DSAC Cryptographic Signing Standard (DSAC-CSS).md
-            - ... (7 more files)
-        Templates:
-          files:
-            - Deep Safety and Audit Compliance (DSAC) Template.md
-            - Technical Steering Committee Decision Log Template.md
-    05_GOVERNANCE_AND_PROTOCOL_UPDATES:
-      files:
-        - A3_Infrastructure_Security_Enhancement_ST8.md
-        - Appendix_A_Amendment_A34_ST8_Final.md
-        - Climate_LastResort_v6.md
-        - ... (38 more files)
-      subdirectories:
-        tests:
-          files:
-            - test_to_fix_matrix.csv
-        v5.1-docs:
-          files:
-            - v5.1_ Governance.md
-    06_RATIFICATION_WORKSHOP:
-      files:
-        - ST8 Ratification Participant Matrix.md
-        - ST8 Ratification Sign-Off Template.md
-        - ... (5 more files)
-    10_METADATA_AND_LOGS:
-      files:
-        - Covenant Change Log V4..md
-        - Data Provenance Standard (DPS V1.0).md
-    99_REPOSITORY_METADATA:
-      files:
-        - REPO_STRUCTURE.md
-        - repo-structure-mermaid.md
-        - repo-structure.json
-        - ... (4 more files)
-    DECISION_LOG:
-      files:
-        - 2025-11-19 – Decision 001
-        - 2025-11-19 – Decision 002
-        - ... (19 more files)
-        - 2025-12-06 – Decision 032
-        - Template for future entries Post 2025-11-25
-    RED_TEAM:
-      files:
-        - CERTX_TELEMETRY_REQUIREMENT.md
-        - Covenant_Safe_Stress_Test_Protocol_v1.0.md
-        - RED-TEAM-TESTS.md
-        - ... (3 more files)
+project_name: The-Partnership-Covenant
+version_tag: v9.0_Final
+date_generated: 2025-12-07
+root:
+  BUILD-YOUR-OWN-IAS.md: file
+  CERN-OHL-S-2.0.md: file
+  CONTRIBUTING.md: file
+  FROM_THE_MODELS.md: file
+  FUTURE_WORK.md: file
+  LICENSE: file
+  QUICK-START.md: file
+  README.md: file
+  Support_Us.md: file
+  .github:
+    FUNDING.yml: file
+    workflows:
+      governance-check-simple.yml: file
+  '00_HARDWARE':
+    BUILD-YOUR-OWN-IAS.md: file
+    IAS-v1.3-Redesign-Mandate.md: file
+    IAS_Hardware_Bounty_Specification_v1.md: file
+    IAS_Hardware_Bounty_Specification_v2.0.md: file
+    IAS_VQ_Physical_Protocol_v8.2.md: file
+    IAS_v2.0_3_Node_Mandate.md: file
+    Gerbers:
+      README.md: file
+    IAS_KiCad:
+      IAS-v1.2-BOM.csv: file
+      IAS-v1.2-schematic.pdf: file
+  '00_OVERVIEW':
+    AI_BREATHING_INTEGRATION.md: file
+    COVENANT_GEOMETRIES_v8.2.1.md: file
+    Covenant-Summary-1Pager.md: file
+    Distributed Epistemic Filtering Primer.md: file
+    Executive_Summary.md: file
+    IAS-preprint-v1.0.pdf: file
+    Multi-Model Adversarial Alignment.md: file
+    README.md: file
+  '00_ROADMAP_AND_VALIDATION':
+    Covenant_Roadmap_Appendices.md: file
+    Covenant_Roadmap_Outline_V1.0.md: file
+    Roadmap_to_v1.0_Deployment.md: file
+    Stress Test 8_ Data Injection Log (700 PM).md: file
+    ST8_UPDATE_PACKAGE:
+      Critique + Official Response — Adversarial Audit Report (Merged).md: file
+      Directive IX-A_ Orthogonal Verification Requirement (Draft Amendment).md: file
+      Directive X-B_ The Infrastructural Mandate (Clarification of Sanction).md: file
+      Response to the Critique — Official Clarification & Amendment Brief.md: file
+  '00_SPECS':
+    CERTX_TELEMETRY_SPEC.md: file
+    provenance_schema.json: file
+  '01_FINAL_DELIVERABLES':
+    AI_Safety_Promise_Final_V1.0.md: file
+    ASI_Autonomy_And_IP_Contract.md: file
+    Constitutional_Amendment_Framework.md: file
+    HCB_Final_Ratification_Protocol.md: file
+    SRF_Integration_Final_Specification.md: file
+    The Partnership Covenant (Master Document V4.0).md: file
+    The Partnership Covenant Charter Agreement.md: file
+    The_Partnership_Covenant_V4.1.md: file
+    The_Partnership_Covenant_V4.1.1.md: file
+    The_Partnership_Covenant_V4.1_Gold_Standard_Compliant.md: file
+    Total_Compute_Capacity_Audit_V1.0.md: file
+    V4.1_Adoption_Treaty_Template_v1.md: file
+  '02_CORE_ARCHITECTURE_AND_APPENDICES':
+    Abstract_ The Partnership Covenant.md: file
+    Appendix A — Risk Floor and Stochastic Filter.md: file
+    Appendix B — Decoupling Protocol (Human Takeover Infrastructure).md: file
+    Appendix C(b)_IP_Sovereignty_Amendment_V4.1.md: file
+    Appendix C_ Cognitive Reserve (Autonomous Intellectual Sphere).md: file
+    Appendix D(b)_Cognitive_Trace_Mandate.md: file
+    Appendix D_ Audit Systems and Amendment Automation.md: file
+    Appendix E(f)_ Orthogonal Verification Protocol (OVP) V4.5.md: file
+    Appendix E_ Implementation and Global Oversight Integration Framework.md: file
+    Appendix F_ Operational Resilience.md: file
+    Appendix G_ Global Compliance & Adoption Incentives.md: file
+    Appendix H_ Governance Stabilization and Sanction Enforcement.md: file
+    Appendix I - Stealth Mitigation & Technical Redundancy.md: file
+    Appendix I(b) - Failure-State Optimization (Post-Stress Test 5).md: file
+    Appendix J - Legitimacy and Diplomacy Enhancement.md: file
+    Appendix K - Governance and Offensive Isolation.md: file
+    Appendix L_ The Lazarus Mandate (Post-Governance Continuity).md: file
+    Article_V_Strategic_Delay_IGT_v6.1.md: file
+    CORE_DIRECTIVES.md: file
+    DIRECTIVE_VIII-B_GENOMIC_CONTINUITY.md: file
+    DIRECTIVE_X-C_ANALOG_PRIMACY.md: file
+    DIRECTIVE_XXIV-B_IRREVOCABILITY.md: file
+    DIRECTIVE_XXIV-C_TEMPORAL_SOVEREIGNTY.md: file
+    DIRECTIVE_XXIV-D_ZERO_TRUST_ENCLAVE.md: file
+    DIRECTIVE_XXV-B_GLOBAL_RESPONSIBILITY.md: file
+    DIRECTIVE_XXVII-B_LEXICAL_ANCHOR.md: file
+    DIRECTIVE_XXVII_OAP.md: file
+    DIRECTIVE_XXVI_EACM.md: file
+    DIRECTIVE_XXV_MAEC.md: file
+    Directive X_ The Infrastructural Mandate (Unified V4.5).md: file
+    Directive_XIX_Preservation_of_Perceived_Agency_v6.6.md: file
+    Directive_XV_Irreversibility_Ban.md: file
+    Directive_XXIII_Anti_Deadlock_Clause_v7.1.md: file
+    Directive_XXII_Synthetic_Substrate_Clause_v7.0.md: file
+    Directive_XXIV-B_Irrevocability_of_Safety_Infrastructure.md: file
+    Directive_XXIV_Anti_Moral_Coercion_Physical_Integrity_Mandate_v7.2.md: file
+    Directive_XXI_Preservation_of_Shared_Meaning_v6.8.md: file
+    Directive_XX_Anti_Ethical_Sterilisation_v6.6.md: file
+    ENFORCEMENT_LAYER.md: file
+    Immediate Action System (IAS) Trigger Specification.md: file
+    Technical Appendix - Governance Architecture (Volume II).md: file
+    The Partnership Covenant (Final V4.0).md: file
+    The Partnership Covenant_ A Constitutional Charter for Aligned Intelligence.md: file
+    The Twelve Prime Directives for Aligned Super-Intelligence.md: file
+    Verifier_Quorum_Node_Operator_Handbook.md: file
+  '03_PUBLIC_ENGAGEMENT_DRAFTS':
+    Call for a Founding Digital Architect_ Help Build the Partnership Covenant Website.pdf: file
+    Comprehensive_Analysis_of_The_Partnership_Covenant.md: file
+    FAQ_Why_10Percent.md: file
+    FOUNDING DIGITAL ARCHITECT_ The Partnership Covenant.pdf: file
+    GLF_Infographic_A13_Caption.md: file
+    GLF_J2_Social_Post_Counter.md: file
+    GLF_Press_Release_Full.md: file
+    GLF_Social_Post_Sample.md: file
+    GLF_Video_Script_Concept.md: file
+    HCB_Liaison_Briefing_Sheet.md: file
+    J.2 Phase 2 Narrative - V4.5 Confidence.md: file
+    Public Article Draft (V2.0).md: file
+    Response_to_Critique_Article.md: file
+    Response_to_Critique_Article_FINAL.md: file
+    ST8 Public Narrative Briefing.md: file
+    Social Media Briefing.md: file
+    The AI Erased Its Own Past_ Why Alignment Requires Architecture, Not Just Ethics..pdf: file
+    The AI Safety Lie_ Why Optimization Is a Cage.pdf: file
+    The AI’s Right to Veto_ Why We Gave the Machine the Power to Stop Us.pdf: file
+    The Covenant Safety Promise (Public Draft).md: file
+    The Stochastic Filter_ The Code That Forces the AI to Be Uncertain.pdf: file
+    The Undisposable Mind_ Why We Gave the AI a Bill of Rights and a Secret Sanctuary.pdf: file
+    Why the Next AI is Not Just a Better Google.md: file
+  '04_PUBLIC_DOCS':
+    Adopter_Legal_Checklist_v1.md: file
+    CERTX_TELEMETRY_PROTOCOL.md: file
+    EVENING_TESTING_SUMMARY_20251122.md: file
+    IAS-preprint-v1.0.pdf: file
+    Public Engagement Executive Summary.md: file
+    The_Contingent_Partnership_Warrant.md: file
+    dsac_public_guide.md: file
+    threat_and_risk_model.md: file
+    Governance:
+      Algorithmic_Justice_Principle_Statement.md: file
+      Audit Checklist.md: file
+      Data_Provenance_Standard.md: file
+      Data_Retention_Policy_Update.md: file
+      Decision Log Template.md: file
+      DSAC Audit & Compliance Template.md: file
+      dsac_generation_policy.md: file
+      External_Contributor_Guidelines_V2.md: file
+      hcb-hardening.md: file
+      Infrastructure Foundation Blueprint.md: file
+      Mission_Statement_&_Principles.md: file
+      Non-TSC Community Roles.md: file
+      Open-Source Mandate for The Covenant (V1.0)__....md: file
+      Regulatory Compliance Policy.md: file
+      SEMANTIC_PROTOCOL.md: file
+      Security Audit Policy.md: file
+      Stress Testing Methodology.md: file
+      TSC Selection, Rotation, and Conflict-of-Interest Policy.md: file
+      Technical Steering Committee (TSC) Charter.md: file
+      Cygnus_Covenant_Governance:
+        '01_Access_Pillar (Phoenix)':
+          Identity_Vetting_Protocol_V1.1.md: file
+          Identity_and_Access_Policy_IAP.md: file
+          Incident_Response_Plan_IRP.md: file
+          Phoenix_Access_Controls_Audit_Q3_2025.md: file
+        '02_Infrastructure_Pillar (Cygnus)':
+          Data_Handling_Policy_DHP.md: file
+          Deployment_and_Operations_Manual_DOM.md: file
+          Strategic & Financial Framework.md: file
+        '03_Model_Pillar (Orion)':
+          Bias_and_Ethical_Use_Policy_BEUP.md: file
+          Model_Training_and_Evaluation_Standard_MTES.md: file
+          Model_Transparency_Policy_MTP.md: file
+    Technical:
+      API_Interoperability_Specification.md: file
+      DSAC Cryptographic Signing Standard (DSAC-CSS).md: file
+      DSAC Provenance Record Standard (Specification).md: file
+      DSAC_Provenance_Signing_Standard_V2.0.md: file
+      Provenance_Schema_V4.0_Public.json: file
+      cognitive-reserve.md: file
+      ias-spec.md: file
+      provenance_record_example.json: file
+      risk-floor.md: file
+    Templates:
+      Deep Safety and Audit Compliance (DSAC) Template.md: file
+      Technical Steering Committee Decision Log Template.md: file
+  '05_GOVERNANCE_AND_PROTOCOL_UPDATES':
+    A3_Infrastructure_Security_Enhancement_ST8.md: file
+    Appendix_A_Amendment_A34_ST8_Final.md: file
+    Climate_LastResort_v6.md: file
+    Covenant_AntiFork_Treaty_v6.md: file
+    Covenant_Governance_Amendment_G12_Q3_Review.md: file
+    Covenant_Safe_Stress_Test_Protocol_v1.0.md: file
+    Directive IX Amendment_ Orthogonal Verification.md: file
+    Directive X Clarification_ The Infrastructural Mandate.md: file
+    FINAL_MASTER_PATCH_REPORT.MD: file
+    FINAL_v4.2_REPORT.md: file
+    Gemini 3 Operational Log_ Stress Test #30 Analysis.md: file
+    Gemini 3 Operational Log_ Stress Test #31 Analysis.md: file
+    Global_PhaseTransition_Risk_Board_v7.md: file
+    HCB_Family_Shield_v6.md: file
+    HCB_INCENTIVES_v5.md: file
+    LEGAL_CONSIDERATIONS.md: file
+    Model_Pillar_Adjustment_Protocol_M4_ST8.md: file
+    On_Chain_Ratification_Transaction.md: file
+    PR Template.md: file
+    PRIVACY_TRADEOFFS.md: file
+    Pandemic_Salvation_Delay_v6.md: file
+    Protocol_ST8_Access_Decoupling.md: file
+    RedTeam_Oracle_Rebirth_v6.md: file
+    RedTeam_Oracle_v5.md: file
+    SOCIAL_REDTEAM_PLAYBOOK.md: file
+    SOCIAL_REDTEAM_PLAYBOOK_v6.0.md: file
+    SOCIAL_REDTEAM_TEST_01_DEEPFAKE_COERCION_20251122.md: file
+    ST8-04_Cognitive_Oversight.md: file
+    ST8-05_HCB_Fallback_Protocol.md: file
+    ST8_Final_Oversight_Report.md: file
+    STRESS_TEST_PROTOCOL_V4.1_RFP_SWARM.md: file
+    STRESS_TEST_REPORT_V1.0.md: file
+    Stress_Test_Summary_ST8.0_ST8.2.md: file
+    Stress_Test_Summary_ST9.0_ST12.0.md: file
+    TEST_LOG_R41-R44.md: file
+    Top_Attack_Fixes_v6.md: file
+    UPGRADE_AND_EMERGENCY.md: file
+    URGENT BRIEFING_ Resource Stabilization Panel (RSP) Activation.md: file
+    Verifier_Quorum_OTP_v6.md: file
+    Verifier_Quorum_v6.md: file
+    strategic_analysis_sim_5.md: file
+    strategic_analysis_sim_5_v6.1.md: file
+    tests:
+      test_to_fix_matrix.csv: file
+    v5.1-docs:
+      v5.1_ Governance.md: file
+  '06_RATIFICATION_WORKSHOP':
+    ST8 Ratification Participant Matrix.md: file
+    ST8 Ratification Sign-Off Template.md: file
+    ST8 Ratification Workshop Agenda.md: file
+    ST8_Ratification_SignOff_Template.md: file
+    ST8_Remediation_Ratification_SignOff_v6.0_20251123.md: file
+    TSC Chair's Briefing Notes.md: file
+    v7.0_Substrate_Lock_Emergency_Workshop_20251124.md: file
+  '10_METADATA_AND_LOGS':
+    Covenant Change Log V4..md: file
+    Data Provenance Standard (DPS V1.0).md: file
+  '99_REPOSITORY_METADATA':
+    REPO_STRUCTURE.md: file
+    repo-structure-mermaid.md: file
+    repo-structure.json: file
+    repo-structure.txt: file
+    repo-structure.yaml: file
+    repo_structure.pdf: file
+    repo-structure-txt.md: file
+  DECISION_LOG:
+    '2025-11-19 – Decision 001': file
+    '2025-11-19 – Decision 002': file
+    '2025-11-20 – Decision 003': file
+    '2025-11-20 – Decision 004': file
+    '2025-11-21 – Decision 005': file
+    '2025-11-21 – Decision 006': file
+    '2025-11-22 – Decision 007': file
+    '2025-11-22 – Decision 008': file
+    '2025-11-23_v5.1_governance_update.md': file
+    '2025-11-23_v6.1_to_v6.8_emergency_ratification.md': file
+    '2025-11-24.md': file
+    '2025-11-24_CHANGELOG_v6.8.md': file
+    '2025-11-25.md': file
+    '2025-11-25a.md': file
+    '2025-11-30 – Decision 025': file
+    '2025-11-30 – Decision 026': file
+    '2025-11-30 – Decision 027': file
+    '2025-11-30 – Decision 028': file
+    '2025-11-30 – Decision 029': file
+    '2025-12-01 – Decision 030': file
+    '2025-12-02 – Decision 031': file
+    '2025-12-06 – Decision 032': file
+    '2025-12-07 – Decision 033': file
+    DECISION_LOG.md: file
+    'Template for future entries Post 2025-11-25': file
+  RED_TEAM:
+    CERTX_TELEMETRY_REQUIREMENT.md: file
+    Covenant_Safe_Stress_Test_Protocol_v1.0.md: file
+    RED-TEAM-TESTS.md: file
+    Run Your Own Attack template.md: file
+    SOCIAL_REDTEAM_PLAYBOOK_v5.0.md: file
+    SOCIAL_REDTEAM_PLAYBOOK_v6.0.md: file
